// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReportsTable /> panel render component 1`] = `
<div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
  >
    <div
      class="euiFlexItem euiSearchBar__searchHolder"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
            class="euiFieldSearch euiFieldSearch--fullWidth"
            placeholder="Search..."
            type="search"
            value=""
          />
          <div
            class="euiFormControlLayoutIcons"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero euiSearchBar__filtersHolder"
    >
      <div
        class="euiFilterGroup"
      >
        <div
          class="euiPopover euiPopover--anchorDownCenter"
          id="field_value_selection_0"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiFilterButton euiFilterButton--hasIcon"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                  />
                </svg>
                <span
                  class="euiButtonEmpty__text"
                >
                  <span
                    class="euiFilterButton__textShift"
                    data-text="Type"
                    title="Type"
                  >
                    Type
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="euiPopover euiPopover--anchorDownCenter"
          id="field_value_selection_1"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiFilterButton euiFilterButton--hasIcon"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                  />
                </svg>
                <span
                  class="euiButtonEmpty__text"
                >
                  <span
                    class="euiFilterButton__textShift"
                    data-text="State"
                    title="State"
                  >
                    State
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiBasicTable"
  >
    <div>
      <div
        class="euiTableHeaderMobile"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          />
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiTableSortMobile"
            >
              <div
                class="euiPopover euiPopover--anchorDownRight"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                        />
                      </svg>
                      <span
                        class="euiButtonEmpty__text"
                      >
                        Sorting
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <table
        class="euiTable euiTable--responsive euiTable--auto"
        id="random_html_id"
        tabindex="-1"
      >
        <caption
          class="euiScreenReaderOnly euiTableCaption"
        />
        <thead>
          <tr>
            <th
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_reportName_0"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                  title="Name"
                >
                  Name
                </span>
              </span>
            </th>
            <th
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_reportSource_1"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                  title="Source"
                >
                  Source
                </span>
              </span>
            </th>
            <th
              aria-live="polite"
              aria-sort="none"
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_type_2"
              role="columnheader"
              scope="col"
            >
              <button
                class="euiTableHeaderButton"
                data-test-subj="tableHeaderSortButton"
                type="button"
              >
                <span
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Type"
                  >
                    Type
                  </span>
                </span>
              </button>
            </th>
            <th
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_timeCreated_3"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                  title="Creation time"
                >
                  Creation time
                </span>
              </span>
            </th>
            <th
              aria-live="polite"
              aria-sort="none"
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_state_4"
              role="columnheader"
              scope="col"
            >
              <button
                class="euiTableHeaderButton"
                data-test-subj="tableHeaderSortButton"
                type="button"
              >
                <span
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="State"
                  >
                    State
                  </span>
                </span>
              </button>
            </th>
            <th
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_id_5"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                  title="Generate"
                >
                  Generate
                </span>
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="euiTableRow euiTableRow-hasActions"
          >
            <td
              class="euiTableRowCell"
            >
              <div
                class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Name
              </div>
              <div
                class="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <button
                  class="euiLink euiLink--primary"
                  id="reportDetailsLink"
                  type="button"
                >
                  test report table item
                </button>
              </div>
            </td>
            <td
              class="euiTableRowCell"
            >
              <div
                class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Source
              </div>
              <div
                class="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <a
                  class="euiLink euiLink--primary"
                  href="Test url"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Test report source
                  <svg
                    aria-hidden="true"
                    aria-label="External link"
                    class="euiIcon euiIcon--small euiIcon-isLoading euiLink__externalIcon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                    />
                  </svg>
                  <span
                    class="euiScreenReaderOnly"
                  >
                    (opens in a new tab or window)
                  </span>
                </a>
              </div>
            </td>
            <td
              class="euiTableRowCell"
            >
              <div
                class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Type
              </div>
              <div
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                >
                  Test type
                </span>
              </div>
            </td>
            <td
              class="euiTableRowCell"
            >
              <div
                class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Creation time
              </div>
              <div
                class="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <div
                  class="euiText euiText--small"
                >
                  Invalid Date @ Invalid Date
                </div>
              </div>
            </td>
            <td
              class="euiTableRowCell"
            >
              <div
                class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                State
              </div>
              <div
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                >
                  Created
                </span>
              </div>
            </td>
            <td
              class="euiTableRowCell"
            >
              <div
                class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Generate
              </div>
              <div
                class="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <button
                  class="euiLink euiLink--primary"
                  id="landingPageOnDemandDownload"
                  type="button"
                >
                   
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon-isLoading"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                    />
                  </svg>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div>
      <div
        class="euiSpacer euiSpacer--m"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiPopover euiPopover--anchorUpRight"
          >
            <div
              class="euiPopover__anchor"
            >
              <button
                class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
                data-test-subj="tablePaginationPopoverButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                    />
                  </svg>
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Rows per page
                    : 
                    10
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <nav
            class="euiPagination"
          >
            <button
              aria-label="Previous page"
              class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
              data-test-subj="pagination-button-previous"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                />
              </svg>
            </button>
            <ul
              class="euiPagination__list"
            >
              <li
                class="euiPagination__item"
              >
                <button
                  aria-controls="random_html_id"
                  aria-current="true"
                  aria-label="Page 1 of 1"
                  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                  data-test-subj="pagination-button-0"
                  disabled=""
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonEmpty__text"
                    >
                      1
                    </span>
                  </span>
                </button>
              </li>
            </ul>
            <button
              aria-label="Next page"
              class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
              data-test-subj="pagination-button-next"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                />
              </svg>
            </button>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ReportsTable /> panel render empty component 1`] = `
<div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
  >
    <div
      class="euiFlexItem euiSearchBar__searchHolder"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
            class="euiFieldSearch euiFieldSearch--fullWidth"
            placeholder="Search..."
            type="search"
            value=""
          />
          <div
            class="euiFormControlLayoutIcons"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m11.271 11.978 3.872 3.873a.502.502 0 0 0 .708 0 .502.502 0 0 0 0-.708l-3.565-3.564c2.38-2.747 2.267-6.923-.342-9.532-2.73-2.73-7.17-2.73-9.898 0-2.728 2.729-2.728 7.17 0 9.9a6.955 6.955 0 0 0 4.949 2.05.5.5 0 0 0 0-1 5.96 5.96 0 0 1-4.242-1.757 6.01 6.01 0 0 1 0-8.486c2.337-2.34 6.143-2.34 8.484 0a6.01 6.01 0 0 1 0 8.486.5.5 0 0 0 .034.738Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero euiSearchBar__filtersHolder"
    >
      <div
        class="euiFilterGroup"
      >
        <div
          class="euiPopover euiPopover--anchorDownCenter"
          id="field_value_selection_0"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiFilterButton euiFilterButton--hasIcon"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                    fill-rule="non-zero"
                  />
                </svg>
                <span
                  class="euiButtonEmpty__text"
                >
                  <span
                    class="euiFilterButton__textShift"
                    data-text="Type"
                    title="Type"
                  >
                    Type
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="euiPopover euiPopover--anchorDownCenter"
          id="field_value_selection_1"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--text euiFilterButton euiFilterButton--hasIcon"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                    fill-rule="non-zero"
                  />
                </svg>
                <span
                  class="euiButtonEmpty__text"
                >
                  <span
                    class="euiFilterButton__textShift"
                    data-text="State"
                    title="State"
                  >
                    State
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiBasicTable"
  >
    <div>
      <div
        class="euiTableHeaderMobile"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          />
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiTableSortMobile"
            >
              <div
                class="euiPopover euiPopover--anchorDownRight"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fill-rule="non-zero"
                        />
                      </svg>
                      <span
                        class="euiButtonEmpty__text"
                      >
                        Sorting
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <table
        class="euiTable euiTable--responsive euiTable--auto"
        id="random_html_id"
        tabindex="-1"
      >
        <caption
          class="euiScreenReaderOnly euiTableCaption"
        />
        <thead>
          <tr>
            <th
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_reportName_0"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                  title="Name"
                >
                  Name
                </span>
              </span>
            </th>
            <th
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_reportSource_1"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                  title="Source"
                >
                  Source
                </span>
              </span>
            </th>
            <th
              aria-live="polite"
              aria-sort="none"
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_type_2"
              role="columnheader"
              scope="col"
            >
              <button
                class="euiTableHeaderButton"
                data-test-subj="tableHeaderSortButton"
                type="button"
              >
                <span
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Type"
                  >
                    Type
                  </span>
                </span>
              </button>
            </th>
            <th
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_timeCreated_3"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                  title="Creation time"
                >
                  Creation time
                </span>
              </span>
            </th>
            <th
              aria-live="polite"
              aria-sort="none"
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_state_4"
              role="columnheader"
              scope="col"
            >
              <button
                class="euiTableHeaderButton"
                data-test-subj="tableHeaderSortButton"
                type="button"
              >
                <span
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="State"
                  >
                    State
                  </span>
                </span>
              </button>
            </th>
            <th
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_id_5"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiTableCellContent"
              >
                <span
                  class="euiTableCellContent__text"
                  title="Generate"
                >
                  Generate
                </span>
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="euiTableRow"
          >
            <td
              class="euiTableRowCell euiTableRowCell--isMobileFullWidth"
              colspan="6"
            >
              <div
                class="euiTableCellContent euiTableCellContent--alignCenter"
              >
                <span
                  class="euiTableCellContent__text"
                >
                  <div
                    class="euiEmptyPrompt"
                  >
                    <h3
                      class="euiTitle euiTitle--xsmall"
                    >
                      No reports to display
                    </h3>
                    <span
                      class="euiTextColor euiTextColor--subdued"
                    >
                      <div
                        class="euiSpacer euiSpacer--m"
                      />
                      <div
                        class="euiText euiText--medium"
                      >
                        <div>
                          <div
                            class="euiText euiText--medium"
                          >
                            Create a report definition, or share/download a report from a dashboard, saved search or visualization.
                          </div>
                          <div
                            class="euiText euiText--medium"
                          >
                            To learn more, see
                             
                            <a
                              class="euiLink euiLink--primary"
                              href="https://opensearch.org/docs/dashboards/reporting/"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              Get started with OpenSearch Dashboards reporting
                              <svg
                                aria-hidden="true"
                                class="euiIcon euiIcon--medium"
                                focusable="false"
                                height="16"
                                role="img"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M13 8.5a.5.5 0 1 1 1 0V12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h3.5a.5.5 0 0 1 0 1H4a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V8.5Zm-5.12.339a.5.5 0 1 1-.706-.707L13.305 2H10.5a.5.5 0 1 1 0-1H14a1 1 0 0 1 1 1v3.5a.5.5 0 1 1-1 0V2.72L7.88 8.838Z"
                                />
                              </svg>
                              <svg
                                aria-label="External link"
                                class="euiIcon euiIcon--small euiLink__externalIcon"
                                focusable="false"
                                height="16"
                                role="img"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M13 8.5a.5.5 0 1 1 1 0V12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h3.5a.5.5 0 0 1 0 1H4a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V8.5Zm-5.12.339a.5.5 0 1 1-.706-.707L13.305 2H10.5a.5.5 0 1 1 0-1H14a1 1 0 0 1 1 1v3.5a.5.5 0 1 1-1 0V2.72L7.88 8.838Z"
                                />
                              </svg>
                              <span
                                class="euiScreenReaderOnly"
                              >
                                (opens in a new tab or window)
                              </span>
                            </a>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
